eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: demo-app
spec:
  selector:
    app: web
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
